--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "app",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -6,18 +7,28 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@ionic/vue": "^6.1.4",
-    "@ionic/vue-router": "^6.1.4",
-    "vue": "^3.2.33",
-    "vue-router": "^4.0.15"
+    "@ionic/vue": "^6.1.9",
+    "@ionic/vue-router": "^6.1.9",
+    "@vitejs/plugin-legacy": "^1.8.2",
+    "@vueuse/core": "^8.6.0",
+    "ionicons": "^6.0.2",
+    "lodash-es": "^4.17.21",
+    "papaparse": "^5.3.2",
+    "pinia": "^2.0.14",
+    "pinia-plugin-persistedstate-2": "^1.0.0",
+    "vue": "^3.2.37",
+    "vue-router": "^4.0.15",
+    "vue3-treeview": "^0.3.8"
   },
   "devDependencies": {
-    "@types/node": "^17.0.31",
-    "@vitejs/plugin-vue": "^2.3.2",
-    "@vue/compiler-sfc": "3.2.33",
+    "@types/lodash-es": "^4.17.6",
+    "@types/node": "^17.0.41",
+    "@types/papaparse": "^5.3.2",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/compiler-sfc": "3.2.37",
     "prettier": "^2.6.2",
-    "typescript": "^4.6.4",
-    "vite": "^2.9.8",
-    "vue-tsc": "^0.34.11"
+    "typescript": "^4.7.3",
+    "vite": "^2.9.10",
+    "vue-tsc": "^0.37.3"
   }
 }
